<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageview_singapore"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/dummy"
        android:scaleType="centerCrop"
        android:src="@drawable/singapore"/>

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_below="@id/imageview_singapore"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-18dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/info_background"
        android:contentDescription="@string/dummy"
        android:padding="5dp"
        android:src="@drawable/ic_star"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_singapore">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/singapore"
            android:textSize="24sp"/>

        <LinearLayout
            android:id="@+id/camera_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cameraLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:labelFor="@+id/cameraType"
                android:text="@string/camera"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/cameraType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/camera_value"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setings_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/camera_area"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/settingsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:labelFor="@+id/settings"
                android:text="@string/settings"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/camera_settings"/>
            </RelativeLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setings_area"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:fadingEdge="vertical"
            android:text="@string/singapore_description"
            android:textSize="15sp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/upload"/>

        <Button
            android:id="@+id/discard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:elevation="0dp"
            android:text="@string/discard"/>
    </LinearLayout>
</RelativeLayout>
